--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
-<! Doctype html>
-<html>
-	<head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<meta charset="utf-8">
-		<title>Curso Completo do Desenvolvedor Web</title>
-		<link rel="stylesheet"  href="css/estilo.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  </head>
+  <body>
+  
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100" src="img/bolo1.jpeg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="img/bolo2.jpg" >
+	    </div>
+	  </div>
+	</div>
 
-
-	</head>
-	<body>
-		
-		<header>
-			
-			<nav> </nav>
-		</header>
-		<section>
-
-			
-			
-		</section>
-
-
-		<footer>
-			
-		</footer>
-
-
-		
-		<script type="text/javascript" src= "js/script.js"></script>
-
-	</body>
-
-
-
-
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+  </body>
 </html>
